// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputAutocomplete/> renders correctly if set options 1`] = `
<div
  className="InputAutocompleteStyled-iPrIEM XrRsQ"
>
  <div>
    <div
      className="TextFieldStyled-bdmlkn QIbv"
    >
      <div
        className="TextFieldContentBoxStyled-jDMXvi eLvpQL"
      >
        <div
          className="TextFieldRowStyled-VkWtx iKvbzP"
          disabled={false}
        >
          <div
            className="TextFieldGroupStyled-cLQues dwexzW"
            disabled={false}
          >
            <input
              autoComplete="off"
              className="sc-bwzfXH iprzAE"
              disabled={false}
              id="TextField_1"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              placeholder=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputAutocomplete/> renders correctly if set options and call change option amount 1`] = `
<div
  className="InputAutocompleteStyled-iPrIEM XrRsQ"
>
  <div>
    <div
      className="TextFieldStyled-bdmlkn QIbv"
    >
      <div
        className="TextFieldContentBoxStyled-jDMXvi eLvpQL"
      >
        <div
          className="TextFieldRowStyled-VkWtx iKvbzP"
          disabled={false}
        >
          <div
            className="TextFieldGroupStyled-cLQues dwexzW"
            disabled={false}
          >
            <input
              autoComplete="off"
              className="sc-ifAKCX iibpDV"
              disabled={false}
              id="TextField_4"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              placeholder=""
              type="text"
              value="Opt"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputAutocomplete/> renders correctly if set options and call change option amount 2`] = `
<div
  className="InputAutocompleteStyled-iPrIEM XrRsQ"
>
  <div>
    <div
      className="TextFieldStyled-bdmlkn QIbv"
    >
      <div
        className="TextFieldContentBoxStyled-jDMXvi eLvpQL"
      >
        <div
          className="TextFieldRowStyled-VkWtx iKvbzP"
          disabled={false}
        >
          <div
            className="TextFieldGroupStyled-cLQues dwexzW"
            disabled={false}
          >
            <input
              autoComplete="off"
              className="sc-ifAKCX iibpDV"
              disabled={false}
              id="TextField_4"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              placeholder=""
              type="text"
              value="Opt"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputAutocomplete/> renders correctly if set options and call onChange input 1`] = `
<div
  className="InputAutocompleteStyled-iPrIEM XrRsQ"
>
  <div>
    <div
      className="TextFieldStyled-bdmlkn QIbv"
    >
      <div
        className="TextFieldContentBoxStyled-jDMXvi eLvpQL"
      >
        <div
          className="TextFieldRowStyled-VkWtx iKvbzP"
          disabled={false}
        >
          <div
            className="TextFieldGroupStyled-cLQues dwexzW"
            disabled={false}
          >
            <input
              autoComplete="off"
              className="sc-EHOje doiYmN"
              disabled={false}
              id="TextField_5"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              placeholder=""
              type="text"
              value="Opt"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputAutocomplete/> renders correctly if set options and complete first option 1`] = `
<div
  className="InputAutocompleteStyled-iPrIEM XrRsQ"
>
  <div>
    <div
      className="TextFieldStyled-bdmlkn QIbv"
    >
      <div
        className="TextFieldContentBoxStyled-jDMXvi eLvpQL"
      >
        <div
          className="TextFieldRowStyled-VkWtx iKvbzP"
          disabled={false}
        >
          <div
            className="TextFieldGroupStyled-cLQues dhNDnl"
            disabled={false}
          >
            <input
              autoComplete="off"
              className="sc-bZQynM dUGAxg"
              disabled={false}
              id="TextField_6"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              placeholder=""
              type="text"
              value="Opt"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputAutocomplete/> renders correctly if set options and complete first option 2`] = `
<div
  className="InputAutocompleteStyled-iPrIEM XrRsQ"
>
  <div>
    <div
      className="TextFieldStyled-bdmlkn QIbv"
    >
      <div
        className="TextFieldContentBoxStyled-jDMXvi eLvpQL"
      >
        <div
          className="TextFieldRowStyled-VkWtx iKvbzP"
          disabled={false}
        >
          <div
            className="TextFieldGroupStyled-cLQues dhNDnl"
            disabled={false}
          >
            <input
              autoComplete="off"
              className="sc-bZQynM dUGAxg"
              disabled={false}
              id="TextField_6"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              placeholder=""
              type="text"
              value="Option 2.1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputAutocomplete/> renders correctly if set options and complete first option 3`] = `
<div
  className="InputAutocompleteStyled-iPrIEM XrRsQ"
>
  <div>
    <div
      className="TextFieldStyled-bdmlkn QIbv"
    >
      <div
        className="TextFieldContentBoxStyled-jDMXvi eLvpQL"
      >
        <div
          className="TextFieldRowStyled-VkWtx iKvbzP"
          disabled={false}
        >
          <div
            className="TextFieldGroupStyled-cLQues dhNDnl"
            disabled={false}
          >
            <input
              autoComplete="off"
              className="sc-bZQynM dUGAxg"
              disabled={false}
              id="TextField_6"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              placeholder=""
              type="text"
              value="Option 1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputAutocomplete/> renders correctly if set options and complete first option 4`] = `
<div
  className="InputAutocompleteStyled-iPrIEM XrRsQ"
>
  <div>
    <div
      className="TextFieldStyled-bdmlkn QIbv"
    >
      <div
        className="TextFieldContentBoxStyled-jDMXvi eLvpQL"
      >
        <div
          className="TextFieldRowStyled-VkWtx iKvbzP"
          disabled={false}
        >
          <div
            className="TextFieldGroupStyled-cLQues dhNDnl"
            disabled={false}
          >
            <input
              autoComplete="off"
              className="sc-bZQynM dUGAxg"
              disabled={false}
              id="TextField_6"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              placeholder=""
              type="text"
              value="Option 2"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputAutocomplete/> renders correctly if set options and complete first option 5`] = `
<div
  className="InputAutocompleteStyled-iPrIEM XrRsQ"
>
  <div>
    <div
      className="TextFieldStyled-bdmlkn QIbv"
    >
      <div
        className="TextFieldContentBoxStyled-jDMXvi eLvpQL"
      >
        <div
          className="TextFieldRowStyled-VkWtx iKvbzP"
          disabled={false}
        >
          <div
            className="TextFieldGroupStyled-cLQues dhNDnl"
            disabled={false}
          >
            <input
              autoComplete="off"
              className="sc-bZQynM dUGAxg"
              disabled={false}
              id="TextField_6"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              placeholder=""
              type="text"
              value="Opt"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputAutocomplete/> renders correctly if set options and complete first option 6`] = `
<div
  className="InputAutocompleteStyled-iPrIEM XrRsQ"
>
  <div>
    <div
      className="TextFieldStyled-bdmlkn QIbv"
    >
      <div
        className="TextFieldContentBoxStyled-jDMXvi eLvpQL"
      >
        <div
          className="TextFieldRowStyled-VkWtx iKvbzP"
          disabled={false}
        >
          <div
            className="TextFieldGroupStyled-cLQues dhNDnl"
            disabled={false}
          >
            <input
              autoComplete="off"
              className="sc-bZQynM dUGAxg"
              disabled={false}
              id="TextField_6"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              placeholder=""
              type="text"
              value="Opt"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputAutocomplete/> renders correctly if set options and init value 1`] = `
<div
  className="InputAutocompleteStyled-iPrIEM XrRsQ"
>
  <div>
    <div
      className="TextFieldStyled-bdmlkn QIbv"
    >
      <div
        className="TextFieldContentBoxStyled-jDMXvi eLvpQL"
      >
        <div
          className="TextFieldRowStyled-VkWtx iKvbzP"
          disabled={false}
        >
          <div
            className="TextFieldGroupStyled-cLQues dwexzW"
            disabled={false}
          >
            <input
              autoComplete="off"
              className="sc-htpNat brhVmQ"
              disabled={false}
              id="TextField_2"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              placeholder=""
              type="text"
              value="Opt"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputAutocomplete/> renders correctly if set options, init value and stateless 1`] = `
<div
  className="InputAutocompleteStyled-iPrIEM XrRsQ"
>
  <div>
    <div
      className="TextFieldStyled-bdmlkn QIbv"
    >
      <div
        className="TextFieldContentBoxStyled-jDMXvi eLvpQL"
      >
        <div
          className="TextFieldRowStyled-VkWtx iKvbzP"
          disabled={false}
        >
          <div
            className="TextFieldGroupStyled-cLQues dwexzW"
            disabled={false}
          >
            <input
              autoComplete="off"
              className="sc-bxivhb fcorOR"
              disabled={false}
              id="TextField_3"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              placeholder=""
              type="text"
              value="Opt"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputAutocomplete/> renders correctly with default props 1`] = `
<div
  className="InputAutocompleteStyled-iPrIEM XrRsQ"
>
  <div>
    <div
      className="TextFieldStyled-bdmlkn QIbv"
    >
      <div
        className="TextFieldContentBoxStyled-jDMXvi eLvpQL"
      >
        <div
          className="TextFieldRowStyled-VkWtx iKvbzP"
          disabled={false}
        >
          <div
            className="TextFieldGroupStyled-cLQues dwexzW"
            disabled={false}
          >
            <input
              autoComplete="off"
              className="sc-bdVaJa bteGOT"
              disabled={false}
              id="TextField_0"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              placeholder=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
